@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.dakusui</groupId>
@@ -10,13 +11,6 @@
     <name>symfonion</name>
     <url>https://github.com/dakusui/symfonion</url>
 
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
 
     <scm>
         <connection>scm:git:https://github.com/dakusui/symfonion.git
@@ -27,30 +21,18 @@
         <tag>HEAD</tag>
     </scm>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>4.13.2</junit.version>
-        <logiaslisp.version>1.0</logiaslisp.version>
-        <commons-cli.version>1.2</commons-cli.version>
-        <gson.version>2.8.9</gson.version>
-        <thincrest-pcond.version>1.0.1</thincrest-pcond.version>
-        <jruby.version>9.2.12.0</jruby.version>
-        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
-        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
-        <maven-site-plugin.version>3.8.2</maven-site-plugin.version>
-        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
-        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
-        <maven-project-info-reports-plugin.version>3.0.0
-        </maven-project-info-reports-plugin.version>
-        <github-release-plugin.version>1.1.0</github-release-plugin.version>
-        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
-        <pitest-maven.version>1.15.3</pitest-maven.version>
-        <asciidoctor.maven.plugin.version>2.0.0-RC.1
-        </asciidoctor.maven.plugin.version>
-        <asciidoctorj.version>2.2.0</asciidoctorj.version>
-        <asciidoctorj.diagram.version>2.0.1</asciidoctorj.diagram.version>
-        <valid8j-pcond.version>1.0.3</valid8j-pcond.version>
-    </properties>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <organization>
+        <name>Hiroshi Ukai</name>
+        <url>http://dakusui.github.io/</url>
+    </organization>
 
     <developers>
         <developer>
@@ -60,11 +42,53 @@
         </developer>
     </developers>
 
+    <properties>
+        <!-- BEGIN: project settings -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <github.global.server>github</github.global.server>
+        <env.GEM_PATH>${project.basedir}/.generated/build/gems</env.GEM_PATH>
+        <!-- END: project settings -->
+        <!-- BEGIN: runtime dependencies -->
+        <logiaslisp.version>1.0</logiaslisp.version>
+        <commons-cli.version>1.2</commons-cli.version>
+        <gson.version>2.8.9</gson.version>
+        <valid8j-pcond.version>1.0.3</valid8j-pcond.version>
+        <!-- BEGIN: test dependencies -->
+        <junit.version>4.13.2</junit.version>
+        <thincrest-pcond.version>1.0.1</thincrest-pcond.version>
+        <!-- END: test dependencies -->
+        <!-- BEGIN: build dependencies -->
+        <asciidoclet.version>2.0.0-SNAPSHOT</asciidoclet.version>
+        <asciidoctor.maven.plugin.version>2.0.0-RC.1</asciidoctor.maven.plugin.version>
+        <asciidoctorj.version>2.5.11</asciidoctorj.version>
+        <asciidoctorj.diagram.version>2.0.1</asciidoctorj.diagram.version>
+        <jruby.version>9.2.12.0</jruby.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+        <pitest-maven.version>1.15.3</pitest-maven.version>
+        <pitest-junit5-plugin.version>1.2.1</pitest-junit5-plugin.version>
+        <github-release-plugin.version>1.5.0</github-release-plugin.version>
+        <exec-maven-plugin.version>3.2.0</exec-maven-plugin.version>
+        <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
+        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+        <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+        <maven-site-plugin.version>4.0.0-M13</maven-site-plugin.version>
+        <maven-project-info-reports-plugin.version>3.5.0</maven-project-info-reports-plugin.version>
+        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+        <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
+        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
+        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
+        <maven-shade-plugin.version>3.5.2</maven-shade-plugin.version>
+        <!-- END: build dependencies -->
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -75,6 +99,11 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.dakusui</groupId>
+            <artifactId>valid8j-pcond</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -92,6 +121,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
                 <groupId>com.github.dakusui</groupId>
                 <artifactId>logiaslisp</artifactId>
                 <version>${logiaslisp.version}</version>
@@ -102,19 +137,14 @@
                 <version>${commons-cli.version}</version>
             </dependency>
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>${gson.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.github.dakusui</groupId>
                 <artifactId>valid8j-pcond</artifactId>
                 <version>${valid8j-pcond.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.dakusui</groupId>
@@ -123,24 +153,6 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <name>Sonatype Nexus release repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
-            </url>
-        </repository>
-        <site>
-            <id>${project.name}</id>
-            <url>file:///${user.dir}/target/site-staging</url>
-        </site>
-    </distributionManagement>
 
     <build>
         <pluginManagement>
@@ -201,24 +213,43 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>${maven-javadoc-plugin.version}</version>
-                    <!-- configuration>
-                        <doclet>org.asciidoctor.Asciidoclet</doclet>
+                    <configuration>
+                        <overview>src/main/javadoc/overview.adoc</overview>
+                        <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
                         <docletArtifact>
-                            <groupId>org.asciidoctor</groupId>
+                            <groupId>com.github.dakusui</groupId>
                             <artifactId>asciidoclet</artifactId>
                             <version>${asciidoclet.version}</version>
+                            <classifier>shaded</classifier>
                         </docletArtifact>
-                        <overview>src/main/javadoc/overview.adoc</overview>
-                        <additionalparam>
-                            - -base-dir ${project.basedir}
-                            - -attribute "name=${project.name}"
-                            - -attribute "version=${project.version}"
-                            - -attribute "imagesoutdir=.asciidoctor/diagram"
-                            - -require asciidoctor-diagram
-                            - -gem-path ${env.GEM_PATH}
-                            - -attribute data-uri
-                        </additionalparam>
-                    </configuration -->
+                        <additionalJOptions>
+                            <additionalJOption>--add-exports=jdk.javadoc/jdk.javadoc.internal.api=asciidoclet</additionalJOption>
+                            <additionalJOption>--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=asciidoclet</additionalJOption>
+                            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.api=asciidoclet</additionalJOption>
+                            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>
+                            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.tree=asciidoclet</additionalJOption>
+                            <additionalJOption>--add-exports=jdk.compiler/com.sun.tools.javac.model=asciidoclet</additionalJOption>
+                            <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.api=asciidoclet</additionalJOption>
+                            <additionalJOption>--add-opens=jdk.compiler/com.sun.tools.javac.parser=asciidoclet</additionalJOption>
+                            <additionalJOption>-J--add-opens=jdk.javadoc/jdk.javadoc.internal.api=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-opens=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
+                        </additionalJOptions>
+                        <additionalOptions>
+                            --base-dir ${project.basedir}
+                            --attribute "name=${project.name}"
+                            --attribute "version=${project.version}"
+                            --attribute "imagesoutdir=.asciidoctor/diagram"
+                            --attribute "imagesdir=.asciidoctor/diagram"
+                            --attribute "dot=/usr/bin/dot"
+                            --require asciidoctor-diagram
+                            --gem-path ${env.GEM_PATH}
+                            --attribute data-uri
+                        </additionalOptions>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
@@ -324,7 +355,7 @@
                                     <toc>left</toc>
                                     <icons>font</icons>
                                     <sectanchors>true</sectanchors>
-                                    <idprefix />
+                                    <idprefix/>
                                     <idseparator>-</idseparator>
                                 </attributes>
                             </configuration>
@@ -517,6 +548,24 @@
         </plugins>
     </reporting>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus snapshot repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Sonatype Nexus release repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
+            </url>
+        </repository>
+        <site>
+            <id>${project.name}</id>
+            <url>file:///${user.dir}/target/site-staging</url>
+        </site>
+    </distributionManagement>
+
     <profiles>
         <profile>
             <!--
@@ -562,7 +611,8 @@
                                 <configuration>
                                     <outputFile>${project.build.directory}/symfonion.jar</outputFile>
                                     <transformers>
-                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                        <transformer
+                                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                             <mainClass>com.github.dakusui.symfonion.cli.Cli</mainClass>
                                         </transformer>
                                     </transformers>
